Bump maven.compiler.release from 8 to 17 [breaking]
* Bump maven.compiler.release from 8 to 17

Raise the minimum JDK from 8 to 17 in preparation for upgrading
JGit to 7.x which requires JDK 17. Since Scalpel is a build tool
and the primary consumer (Apache Camel) already requires JDK 17,
this is acceptable.

Also fixes modernizer violations triggered by the new target:
- Paths.get() → Path.of()
- Collections.emptyList/Set/Map() → List/Set/Map.of()
- Collections.singletonList() → List.of()
- String.format() → String.formatted()

Refs #26

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* ci: update JDK matrix to 17+ after compiler.release bump

Since maven.compiler.release is now 17, builds on JDK 8 and 11
fail at compile time. Update the CI JDK matrix to [17, 21, 25].

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>